[package]
name = "pngme"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pngme"
path = "src/lib/lib.rs"

[[bin]]
name = "pngme"
path = "src/bin/bin.rs"

[dependencies]
anyhow = "1.0.44"
crc = "1.8.1"
structopt = "0.3.23"
